Issue #26766: Fix _PyBytesWriter_Finish()

Return a bytearray object when bytearray is requested and when the small buffer
is used.

Fix also test_bytes: bytearray%args must return a bytearray type.