Lib/test/test_bytes.py
@@ -492,7 +492,7 @@ class BaseBytesTest:
         b = self.type2test(b'%s / 100 = %d%%')
         a = b % (b'seventy-nine', 79)
         self.assertEqual(a, b'seventy-nine / 100 = 79%')
-        self.assertIs(type(a), bytes)
+        self.assertIs(type(a), self.type2test)
 
     def test_imod(self):
         b = self.type2test(b'hello, %b!')
@@ -504,7 +504,7 @@ class BaseBytesTest:
         b = self.type2test(b'%s / 100 = %d%%')
         b %= (b'seventy-nine', 79)
         self.assertEqual(b, b'seventy-nine / 100 = 79%')
-        self.assertIs(type(b), bytes)
+        self.assertIs(type(b), self.type2test)
 
     def test_rmod(self):
         with self.assertRaises(TypeError):
